syntax = "proto3";

option csharp_namespace = "Grpc.Authorization";

package greet;


service AuthorizationGrpcService {

	rpc JWTSignOut (JwtSignOutRequest) returns (QueryState);

	rpc JWTRefreshToken (JwtRefreshTokenRequest) returns (JwtRefreshTokenResponse);

	rpc JWTSignIn (JwtSignInRequest) returns (JwtSignInResponse);

}

message JwtResponse {
	string access_token = 1;
	string refresh_token = 2;
}

message QueryState {
	string error_message = 1;
	bool successed = 2;
}


message JwtSignOutRequest {
	string user_account_id = 1;
}


message JwtRefreshTokenRequest {
	string user_account_id = 1;
	string refresh_token = 2;
}
message JwtRefreshTokenResponse {
	oneof result {
		QueryState state = 1;
		JwtResponse jwt = 2;
	}
}


message JwtSignInRequest {
  string name = 1;
  string user_account_id = 2;
}
message JwtSignInResponse {
	oneof result {
		QueryState state = 1;
		JwtResponse jwt = 2;
	} 
}
