syntax = "proto3";

import "Protos/accountCommon.proto";

option csharp_namespace = "Grpc.Accounts";

package accounts;

service UserAccountGrpcService {
  
  rpc FindAccountById (FindUserAccountByIdRequest) returns (FindUserAccountByIdResponse);

  rpc FindAccountByUserName (FindUserAccountByUserNameRequest) returns (FindUserAccountByUserNameResponse);
}


message FindUserAccountByUserNameRequest {
  string user_name = 1;
}

message FindUserAccountByUserNameResponse {
	UserAccount user_account = 1;
	QueryResultState query_state = 2;
}


message FindUserAccountByIdRequest {
  string userAccountId = 1;
}

message FindUserAccountByIdResponse {
	UserAccount user_account = 1;
	QueryResultState query_state = 2;
}